# qa_guru_hw16

./: pyproject.toml
