[tool.poetry]
name = "qa-guru-hw16"
version = "0.1.0"
description = "first poetry project"
authors = ["Irina Luchkova <shtejn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.0.2"
selene = ">=2.0.0rc8"


[tool.poetry.group.dev.dependencies]
pylint = "3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
